--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sign-up</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <div class="image-sidebar">
@@ -34,27 +35,27 @@
             <div class="input-group">
               <p>
                 <label for="first-name">FIRST NAME</label>
-                <input type="text" id="first-name" name="first-name">
+                <input type="text" id="first-name" name="first-name" required>
               </p>
               <p>
                 <label for="last-name">LAST NAME</label>
-                <input type="text" id="last-name" name="last-name">
+                <input type="text" id="last-name" name="last-name" required>
               </p>
               <p>
                 <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="email" required>
               </p>
               <p>
                 <label for="phone">PHONE NUMBER</label>
-                <input type="tel" id="phone" name="phone">
+                <input type="tel" id="phone" name="phone" required>
               </p>
               <p>
                 <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" required>
               </p>
               <p>
                 <label for="confirm">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm" name="confirm">
+                <input type="password" id="confirm" name="confirm" required>
               </p>
             </div>
           </section>
