--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
               </p>
               <p>
                 <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" class="error" required>
+                <span class="error-message" aria-live="polite"></span>
               </p>
               <p>
                 <label for="confirm">CONFIRM PASSWORD</label>
-                <input type="password" id="confirm" name="confirm" required>
+                <input type="password" id="confirm" name="confirm" class="error" required>
               </p>
             </div>
           </section>
